// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/gist should render with align attribute 1`] = `
"<!-- wp:coblocks/gist {\\"url\\":\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\",\\"align\\":\\"wide\\"} -->
<div class=\\"wp-block-coblocks-gist alignwide\\"><script src=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7.js\\"></script><noscript><a href=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\">View this gist on GitHub</a></noscript></div>
<!-- /wp:coblocks/gist -->"
`;

exports[`coblocks/gist should render with caption attribute 1`] = `
"<!-- wp:coblocks/gist {\\"url\\":\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\"} -->
<div class=\\"wp-block-coblocks-gist\\"><script src=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7.js\\"></script><noscript><a href=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\">View this gist on GitHub</a></noscript><figcaption>caption</figcaption></div>
<!-- /wp:coblocks/gist -->"
`;

exports[`coblocks/gist should render with className attribute 1`] = `
"<!-- wp:coblocks/gist {\\"url\\":\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\",\\"className\\":\\"my-custom-class\\"} -->
<div class=\\"wp-block-coblocks-gist my-custom-class\\"><script src=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7.js\\"></script><noscript><a href=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\">View this gist on GitHub</a></noscript></div>
<!-- /wp:coblocks/gist -->"
`;

exports[`coblocks/gist should render with file attribute 1`] = `
"<!-- wp:coblocks/gist {\\"url\\":\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\",\\"file\\":\\"file.js\\"} -->
<div class=\\"wp-block-coblocks-gist\\"><script src=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7.js?file=file.js\\"></script><noscript><a href=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7#file-file-js\\">View this gist on GitHub</a></noscript></div>
<!-- /wp:coblocks/gist -->"
`;

exports[`coblocks/gist should render with meta attribute 1`] = `
"<!-- wp:coblocks/gist {\\"url\\":\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\",\\"meta\\":false} -->
<div class=\\"wp-block-coblocks-gist no-meta\\"><script src=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7.js\\"></script><noscript><a href=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\">View this gist on GitHub</a></noscript></div>
<!-- /wp:coblocks/gist -->"
`;

exports[`coblocks/gist should render with url attribute 1`] = `
"<!-- wp:coblocks/gist {\\"url\\":\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\"} -->
<div class=\\"wp-block-coblocks-gist\\"><script src=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7.js\\"></script><noscript><a href=\\"https://gist.github.com/someuser/a04f4e14e3cd3b6d48157ea0706114f7\\">View this gist on GitHub</a></noscript></div>
<!-- /wp:coblocks/gist -->"
`;
